fixed word-wrap

--- a/blueandgrey-small.css
+++ b/blueandgrey-small.css
@@ -1,7 +1,7 @@
 /*Style for whole page below 600px wide*/
 html {
   background: #c9dbe9;
-  overflow-x: hidden;
+  word-wrap: break-word;
 }
 
 body {
